--- a/Frontend_1/src/Dashboard/Notification/NotificationCSS.css
+++ b/Frontend_1/src/Dashboard/Notification/NotificationCSS.css
@@ -1,32 +1,34 @@
-.notification-box {
-  max-width: 20vw;
-  width: 100%;
-  color: #000000;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
-  text-align: center;
-  margin-bottom: 5%;
+.notification-box{
+  margin-left: 15px;
+  justify-content: center;
+  display: flex;
+  height: 85px;
+  width: 80%;
+  padding: 1px 20px;
+  flex-direction: column;
+  align-items: flex-start;
+  flex-shrink: 0;
+  border-radius: 20px;
+  background: #FFF;
+  box-shadow: 0px 8px 16px 0px rgba(50, 50, 71, 0.06), 0px 8px 8px 0px rgba(50, 50, 71, 0.08);
+  transition: all 0.3s ease-in-out;
+  margin-bottom: 20px;
 }
 
-.notification-box h2 {
-  font-size: 18px;
-  margin-bottom: 5px;
+.notification-box h2{
+  font-size: 16px;
+  font-weight: 600;
+  color: #000;
 }
 
-.notification-box p {
-  font-size: 20px;
-  margin-bottom: 15px;
+.notification-box p{
+  margin-top: -2px;
+  font-size: 14px;
+  font-weight: 400;
+  color: #000;
 }
 
-.notification-read {
-  color: var(--color-1);
-  border: none;
-  border-radius: 5px;
+.notification-box:hover{
   cursor: pointer;
-  font-size: 40px;
-  transition: background-color 0.3s;
-}
-
-.notification-read:hover {
-  color: var(--color-3);
+  background: #F5F5F5;
 }
