--- a/Frontend/src/Dashboard/Notification/NotificationCSS.css
+++ b/Frontend/src/Dashboard/Notification/NotificationCSS.css
@@ -1,4 +1,4 @@
-.notification-box{
+.notification-box {
   margin-left: 15px;
   justify-content: center;
   display: flex;
@@ -9,26 +9,36 @@
   align-items: flex-start;
   flex-shrink: 0;
   border-radius: 20px;
-  background: #FFF;
-  box-shadow: 0px 8px 16px 0px rgba(50, 50, 71, 0.06), 0px 8px 8px 0px rgba(50, 50, 71, 0.08);
+  background: #fff;
+  box-shadow: 0px 8px 16px 0px rgba(50, 50, 71, 0.06),
+    0px 8px 8px 0px rgba(50, 50, 71, 0.08);
   transition: all 0.3s ease-in-out;
   margin-bottom: 20px;
 }
 
-.notification-box h2{
+.nofication-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.notification-close {
+}
+
+.notification-box h2 {
   font-size: 16px;
   font-weight: 600;
   color: #000;
 }
 
-.notification-box p{
+.notification-box p {
   margin-top: -2px;
   font-size: 14px;
   font-weight: 400;
   color: #000;
 }
 
-.notification-box:hover{
+.notification-box:hover {
   cursor: pointer;
-  background: #F5F5F5;
+  background: #f5f5f5;
 }
