--- a/Frontend/src/UserForm/CSS/styles.css
+++ b/Frontend/src/UserForm/CSS/styles.css
@@ -1,191 +1,181 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Quicksand&display=swap");
 body {
-    margin: 0;
-    font-family: 'Arial', sans-serif;
+  margin: 0;
+  font-family: "Arial", sans-serif;
 }
 
 .container {
-    display: grid;
-    grid-template-columns: 1fr 2fr 3fr 1fr;
-    grid-template-rows: 1fr 2fr 1fr;
-    height: 100vh;
-    align-items: center;
+  display: grid;
+  grid-template-columns: 1fr 2fr 3fr 1fr;
+  grid-template-rows: 1fr 2fr 1fr;
+  height: 100vh;
+  align-items: center;
 }
 
 .company-logo {
-    grid-column: 3/4;
-    grid-row: 2/3;
-    margin-left: 10%;
-    border-radius: 50px;
-    width: 95%;
+  grid-column: 3/4;
+  grid-row: 2/3;
+  margin-left: 10%;
+  border-radius: 50px;
+  width: 95%;
 }
 
 .form-container {
-    grid-column: 2/3;
-    grid-row: 2/3;
-    align-items: center;
-    justify-content: center;
-    margin-right: 20%;
-    margin-left: 20%;
+  grid-column: 2/3;
+  grid-row: 2/3;
+  align-items: center;
+  justify-content: center;
+  margin-right: 20%;
+  margin-left: 20%;
 }
 
 .form-fields {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 24px;
-
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 24px;
 }
 .fields-container svg {
-    position: absolute;
-    top: 30%;
-    left: 20px;
-    color: #000000;
-    font-size: 19px;
-
+  position: absolute;
+  top: 5%;
+  left: -1.5vw;
+  color: #000000;
+  font-size: 19px;
 }
 .button-frontpage svg {
-    position: absolute;
-    left: 16px;
-    margin-top: 1px;
+  position: absolute;
+  left: 16px;
+  margin-top: 1px;
 }
 
 .fields-container {
-    position: relative;
+  position: relative;
 }
 
 .fields-container i {
-    position: absolute;
-    top: 50%;
-    left: 10px;
-    transform: translateY(-50%);
+  position: absolute;
+  top: 50%;
+  left: 10px;
+  transform: translateY(-50%);
 }
 
 input {
-    width: 100%;
-    padding: 16px 16px 16px 50px;
-    border: 1px solid #F2F2F2;
-    border-radius: 13px;
-    background: #F2F2F2;
-    font-size: medium;
-    height: 20px;
-    font-family: 'Quicksand', sans-serif;
+  width: 100%;
+  padding: 16px 16px 16px 50px;
+  border: 1px solid #f2f2f2;
+  border-radius: 13px;
+  background: #f2f2f2;
+  font-size: medium;
+  height: 20px;
+  font-family: "Quicksand", sans-serif;
 }
 
 button {
-    width: 80%;
-    padding: 10px;
-    background-color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+  width: 80%;
+  padding: 10px;
+  background-color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 .button-black {
-    background-color: #000000;
-    border-radius: 13px;
-    color: #fff;
-    grid-column: 2/3;
-    grid-row: 2/3;
-    margin-top: 25px;
-    height: 54px;
-    width: 126%;
-    font-weight: bold;
-    font-family: 'Quicksand', sans-serif;
+  background-color: #000000;
+  border-radius: 13px;
+  color: #fff;
+  grid-column: 2/3;
+  grid-row: 2/3;
+  margin-top: 25px;
+  height: 54px;
+  width: 126%;
+  font-weight: bold;
+  font-family: "Quicksand", sans-serif;
 }
 .button-black:hover {
-    background-color: #363636;
-    color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  background-color: #363636;
+  color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
-
 
 .bottom-section {
-    grid-area: 3 / 1 / 4 / 3;
-    margin-top: auto;
-    color: #000;
+  grid-area: 3 / 1 / 4 / 3;
+  margin-top: auto;
+  color: #000;
 }
 
-
 .button-with-icon {
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    grid-column: 1/2;
-    grid-row: 3/4;
-
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  grid-column: 1/2;
+  grid-row: 3/4;
 }
 
 .button-with-icon i {
-    margin-right: 5px;
+  margin-right: 5px;
 }
 
 .alaosa {
-    grid-column: 1/2;
-    grid-row: 3/4;
-    margin-left: 20px;
+  grid-column: 1/2;
+  grid-row: 3/4;
+  margin-left: 20px;
 }
 .account {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    text-align: center;
-    margin-bottom: 15px;
-    margin-left: 38px;
-    padding-left: 8px;
-    margin-top: -10px;
-    white-space: nowrap;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  margin-bottom: 15px;
+  margin-left: 38px;
+  padding-left: 8px;
+  margin-top: -10px;
+  white-space: nowrap;
 }
 
 .account p {
-    display: inline-block;
-    font-size: 16px;
-    font-family: 'Quicksand', sans-serif;
+  display: inline-block;
+  font-size: 16px;
+  font-family: "Quicksand", sans-serif;
 }
 
 .button.signin {
-    display: inline-block;
+  display: inline-block;
 }
 
 a {
-    text-decoration: none;
-    color: rgb(0,191,255);
-    font-weight: bold;
-    font-size: 16px;
-    font-family: 'Quicksand', sans-serif;
-
-
+  text-decoration: none;
+  color: rgb(0, 191, 255);
+  font-weight: bold;
+  font-size: 16px;
+  font-family: "Quicksand", sans-serif;
 }
 .account a:hover {
-    color: rgb(70,130,180);
+  color: rgb(70, 130, 180);
 }
 .estatebrew {
-    text-align: center;
-    margin: 0;
-    padding: 0;
-    margin-left: 8px;
-    font-family: 'Quicksand', sans-serif;
-    font-size: 7vh;
-    margin-top: -20px;
-
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  margin-left: 8px;
+  font-family: "Quicksand", sans-serif;
+  font-size: 7vh;
+  margin-top: -20px;
 }
 
-.button-frontpage{
-    color: #000000;
-    font-size: large;
-    font-family: 'Quicksand', sans-serif;
+.button-frontpage {
+  color: #000000;
+  font-size: large;
+  font-family: "Quicksand", sans-serif;
 }
 
 .button-frontpage .icon {
-
-    margin-right: 10px;
+  margin-right: 10px;
 }
 
 .button-frontpage:hover {
-
-    color: #747474;}
+  color: #747474;
+}
 
 .icon {
-
-    font-size: 25px;
+  font-size: 25px;
 }
