--- a/Frontend/src/Dashboard/Notification/NotificationCSS.css
+++ b/Frontend/src/Dashboard/Notification/NotificationCSS.css
@@ -2,7 +2,6 @@
   margin-left: 15px;
   justify-content: flex-start;
   display: flex;
-  height: 12vh;
   width: 80%;
   padding: 1px 20px;
   flex-direction: column;
@@ -14,6 +13,7 @@
     0px 8px 8px 0px rgba(50, 50, 71, 0.08);
   transition: all 0.3s ease-in-out;
   margin-bottom: 20px;
+  word-break: break-all;
   position: relative;
 }
 
@@ -21,22 +21,24 @@
   font-size: 16px;
   font-weight: 600;
   color: #000;
+  margin-bottom: 5px;
 }
 
 .notification-box p {
-  margin-top: -2px;
   font-size: 14px;
   font-weight: 400;
   color: #000;
+  margin-bottom: 10px;
 }
 
 .close-button {
   position: absolute;
-  bottom: 0px;
-  left: 50%;
-  transform: translateX(-50%);
+  left: 90%;
+  right: 0%;
+  transform: translate(-50%, 20%);
   padding: 5px 10px;
   color: #43c59e;
   cursor: pointer;
   width: 3vw;
+  font-size: 30px;
 }
