--- a/Frontend/src/PropertyAdd/popup.css
+++ b/Frontend/src/PropertyAdd/popup.css
@@ -59,6 +59,17 @@ input {
     transition: border-color 0.3s ease-in-out;
 }
 
+select {
+    font-size: 16px;
+    font-family: 'Quicksand', sans-serif;
+    padding: 12px;
+    box-sizing: border-box;
+    margin-bottom: 15px;
+    border-radius: 8px;
+    border: 1px solid #ccc;
+    transition: border-color 0.3s ease-in-out;
+}
+
 input:focus {
     outline: none;
     border-color: #00507A;
@@ -98,3 +109,5 @@ buttones:hover {
 .form-column input {
     width: calc(100% - 24px); /* Adjust the width as needed */
 }
+
+
