--- a/Frontend/src/Property/Single/CSS/minicard.css
+++ b/Frontend/src/Property/Single/CSS/minicard.css
@@ -14,6 +14,19 @@
     border-radius: 20px;
 }
 
+.minicard > div > p{
+    font-size: 30px;
+    color: #555;
+    text-align: center;
+}
+
+.minicard > div > h4{
+    margin-top: 20px;
+    font-size: 18px;
+    color: #333;
+    text-align: center;
+}
+
 .minicard1 {
     background: #F2F2F7;
     grid-row: 1 / span 2;
@@ -21,31 +34,12 @@
 
 }
 
-.minicard1 h4 {
-    font-size: 20px;
-    font-weight: 600;
-    color: #000000;
-    margin-bottom:  10px;
-    padding: 2px;
-    text-align: center;
-
-}
 
 .minicard2 {
     background: #F2F2F7;
     grid-column: 3 / span 2; /* Adjusted to 2 / 4 instead of 2 / 6 */
     grid-row-start: 1;
     grid-row-end: 3;
-}
-
-.minicard2 h4 {
-    font-size: 20px;
-    font-weight: 600;
-    color: #000000;
-    margin-bottom:  10px;
-    padding: 2px;
-    text-align: center;
-
 }
 
 .minicard3 {
@@ -55,31 +49,12 @@
     grid-row-end: 3
 }
 
-.minicard3 h4 {
-    font-size: 20px;
-    font-weight: 600;
-    color: #000000;
-    margin-bottom:  10px;
-    padding: 2px;
-    text-align: center;
-
-}
-
 .minicard4{
     background: #F2F2F7;
     grid-column: 1 / 3; /* Adjusted to 4 instead of 6 */
     grid-row-start: 3;  grid-row-end: 5;
 }
 
-.minicard4 h4 {
-    font-size: 20px;
-    font-weight: 600;
-    color: #000000;
-    margin-bottom:  10px;
-    padding: 2px;
-    text-align: center;
-
-}
 
 .minicard5 {
     background: #F2F2F7;
@@ -87,15 +62,6 @@
     grid-row-start: 3;  grid-row-end: 5;
 }
 
-.minicard5 h4 {
-    font-size: 20px;
-    font-weight: 600;
-    color: #000000;
-    margin-bottom:  10px;
-    padding: 2px;
-    text-align: center;
-
-}
 
 .minicard6{
     background: #F2F2F7;
@@ -103,13 +69,6 @@
     grid-row-start: 3;  grid-row-end: 5;
 }
 
-.minicard6 h4 {
-    font-size: 20px;
-    font-weight: 600;
-    color: #000000;
-    margin-bottom:  10px;
-    padding: 2px;
-    text-align: center;
 
-}
+
 
