--- a/Frontend/src/Dashboard/Notification/NotificationCSS.css
+++ b/Frontend/src/Dashboard/Notification/NotificationCSS.css
@@ -37,7 +37,7 @@
   right: 0%;
   transform: translate(-50%, 20%);
   padding: 5px 10px;
-  color: #43c59e;
+  color: #000;
   cursor: pointer;
   width: 3vw;
   font-size: 30px;
