--- a/Frontend/src/Property/CSS/card.css
+++ b/Frontend/src/Property/CSS/card.css
@@ -46,3 +46,18 @@
 .kortti-overlay {
     background: rgba(0, 0, 0, 0.5);
 }
+
+.beautiful-buttons {
+    margin-top: -220px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    display: flex;
+    flex-direction: row;
+}
+
+.favourite,
+.delete {
+    margin-right: 5px; /* Adjust the margin between the icons */
+    cursor: pointer; /* Optionally, if they should be clickable */
+}
