--- a/Frontend/src/Settings/SettingsCSS.css
+++ b/Frontend/src/Settings/SettingsCSS.css
@@ -74,14 +74,15 @@
 
 }
 
-.save-changes-btn {
+
+.save-changes-btn-settings {
     grid-column: 3;
     grid-row: 3;
-    padding: 3vh;
     margin-top: -5vh;
+    margin-right: 10vh;
+    margin-left: 3vh;
   }
   .save-button{
-    width: 38vh;
     font-family: 'Quicksand', sans-serif;
     font-size: 14px;
     border-radius: 12px;
@@ -90,7 +91,8 @@
     padding:10px;
     color: #ffffff;
     cursor: pointer;
-    
+    width: 92%;
+    margin-left: -2px;
   }
 
 
@@ -150,12 +152,11 @@
     margin-bottom: 10px; 
   }
   
-  .file-input-container button {
+  .pfp-box-border {
     padding: 8px 12px;
     margin-right: 8px;
-    border: 1px solid #ccc;
     border-radius: 5px;
-    background-color: #010101;
+    background-color: #e9e9e9; /* Add a background color */
     cursor: pointer;
     
   }
@@ -184,6 +185,8 @@
     text-overflow: ellipsis;
     font-family: 'Quicksand', sans-serif;
     font-size: 13px;
+    padding: 10px;
+    margin-right: 6px;
   }
   
   .side-bottom{
