--- a/Frontend/src/UserForm/CSS/styles.css
+++ b/Frontend/src/UserForm/CSS/styles.css
@@ -27,17 +27,19 @@ body {
   justify-content: center;
   margin-right: 20%;
   margin-left: 20%;
+  
 }
 
 .form-fields {
   display: grid;
   grid-template-columns: 1fr;
   gap: 24px;
+  
 }
-.fields-container svg {
+.fields-signin-container .icon-signin-wrapper svg {
   position: absolute;
-  top: 5%;
-  left: -1.5vw;
+  top: 14px;
+  margin-left: 16px;
   color: #000000;
   font-size: 19px;
 }
@@ -47,26 +49,28 @@ body {
   margin-top: 1px;
 }
 
-.fields-container {
+.fields-signin-container {
   position: relative;
+  
 }
 
-.fields-container i {
+.fields-signin-container i {
   position: absolute;
   top: 50%;
   left: 10px;
   transform: translateY(-50%);
+  
 }
 
-input {
-  width: 100%;
+.user-field-signin {
+  width: 125%;
   padding: 16px 16px 16px 50px;
   border: 1px solid #f2f2f2;
   border-radius: 13px;
   background: #f2f2f2;
   font-size: medium;
-  height: 20px;
   font-family: "Quicksand", sans-serif;
+  height: 54px;
 }
 
 button {
